feat: adiciona reset.css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SyntaxWear</title>
+        <title>SyntaxWear</title>
+        <link rel="stylesheet" href="./css/reset.css">
+        <link rel="stylesheet" href="./base.css">
+        <link rel="stylesheet" href="./css/layout.css">
 </head>
 <body>
     <header class="header">
@@ -13,6 +16,7 @@
     <main class="main">
         <section class="hero">
             <!-- Seção hero -->
+             <h1>Titulo</h1>
         </section>
 
         <section class="cat-section">
