--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SyntaxWear</title>
+        <!-- CSS -->
         <link rel="stylesheet" href="./css/reset.css">
-        <link rel="stylesheet" href="./base.css">
+        <link rel="stylesheet" href="./css/variables.css">
+        <link rel="stylesheet" href="./css/base.css">
         <link rel="stylesheet" href="./css/layout.css">
 </head>
 <body>
