--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>SyntaxWear</title>
+        <title>SyntaxWear - Tênis e Moda Urbana</title>
         <!-- CSS -->
         <link rel="stylesheet" href="./css/reset.css">
         <link rel="stylesheet" href="./css/variables.css">
@@ -12,13 +12,58 @@
 </head>
 <body>
     <header class="header">
-        <!-- Logo e navegação -->
+        <div class="nav-bar">
+            <div class="nav-left">
+                <a href="/">
+                    <img src="./images/logo/logo.svg" alt="SyntaxWear - Tênis e Moda Urbana" title="SyntaxWear - Tênis e Moda Urbana">
+                </a>
+            </div>
+            <nav class="nav-center" aria-label="Categorias Principais">
+                <ul>
+                    <li><a href="#">Masculinos</a></li>
+                    <li><a href="#">Femininos</a></li>
+                    <li><a href="#">Outlet</a></li>
+                </ul>
+            </nav>
+            <div class="nav-right" aria-label="Acesso Rápido">
+                <ul class="nav-menu">
+                    <li><a href="#">Nossas lojas</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li>
+                        <a href="#" aria-label="Perfil">
+                            <svg class="icon-user" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#9B5DE5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <circle cx="12" cy="8" r="4" />
+                                <path d="M4 20c0-4 8-4 8-4s8 0 8 4" />
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" aria-label="Ajuda">
+                            <svg class="icon-help" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#9B5DE5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <circle cx="12" cy="12" r="10" />
+                                <path d="M9.09 9a3 3 0 1 1 5.83 1c0 2-3 3-3 3" />
+                                <line x1="12" y1="17" x2="12" y2="17" />
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" aria-label="Carrinho">
+                            <svg class="icon-bag" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#9B5DE5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M6 2l1.5 4h9L18 2" />
+                                <path d="M3 6h18l-1.68 13.39A2 2 0 0 1 17.34 21H6.66a2 2 0 0 1-1.98-1.61L3 6z" />
+                                <circle cx="9" cy="10" r="1" />
+                                <circle cx="15" cy="10" r="1" />
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </header>
 
     <main class="main">
         <section class="hero">
             <!-- Seção hero -->
-             <h1>Titulo</h1>
         </section>
 
         <section class="cat-section">
