--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="./css/layout.css">
 </head>
 <body>
+    <!-- Cabeçalho -->
     <header class="header">
         <div class="nav-bar">
             <div class="nav-left">
