--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
         <link rel="stylesheet" href="./css/variables.css">
         <link rel="stylesheet" href="./css/base.css">
         <link rel="stylesheet" href="./css/layout.css">
-        <link rel="stylesheet" href="./css/header.css">
+
+        <link rel="stylesheet" href="./css/components/header.css">
+        <link rel="stylesheet" href="./css/components/hero.css">
 </head>
 <body>
     <!-- Cabeçalho -->
@@ -66,6 +68,17 @@
     <main class="main">
         <section class="hero">
             <!-- Seção hero -->
+             <div class="hero-overlay">
+                <div class="hero-content">
+                    <span class="hero-subtitle">Kripton One</span>
+                    <h2 class="hero-title">Transforme qualquer passo em presença.</h2>
+                    
+                    <div class="hero-buttons">
+                        <a href="#" class="btn btn-outline">Ver modelos</a>
+                        <a href="#" class="btn btn-filled">Comprar</a>
+                    </div>
+                </div>
+             </div>
         </section>
 
         <section class="cat-section">
