--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>SyntaxWear - Tênis e Moda Urbana</title>
-        <!-- CSS -->
-        <link rel="stylesheet" href="./css/reset.css">
-        <link rel="stylesheet" href="./css/variables.css">
-        <link rel="stylesheet" href="./css/base.css">
-        <link rel="stylesheet" href="./css/layout.css">
+    <meta name="description" content="Loja online de tênis e moda urbana. Encontre os melhores estilos e ofertas exclusivas na SyntaxWear.">
+    
+    <title>SyntaxWear - Tênis e Moda Urbana</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/variables.css">
+    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./css/layout.css">
 
-        <link rel="stylesheet" href="./css/components/header.css">
-        <link rel="stylesheet" href="./css/components/hero.css">
+    <link rel="stylesheet" href="./css/components/header.css">
+    <link rel="stylesheet" href="./css/components/hero.css">
 </head>
 <body>
     <!-- Cabeçalho -->
