feat: Adicionada galeria de produtos em destaque

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./css/components/header.css">
     <link rel="stylesheet" href="./css/components/hero.css">
     <link rel="stylesheet" href="./css/components/prod-cat.css">
+    <link rel="stylesheet" href="./css/components/prod-grid.css">
 </head>
 
 <body>
@@ -140,8 +141,23 @@
         </section>
 
         <!-- Grid de produtos em destaque -->
-        <section class="feat-prod">
+        <section class="grid-section">
+            <div class="card top1">
+                <div class="hero-content">
+                    <span class="hero-subtitle">Kripton One</span>
+                    <h2 class="hero-title">Estilo Urbano com atitude.</h2>
 
+                    <div class="hero-buttons">
+                        <a href="#" class="btn btn-outline">Feminino</a>
+                        <a href="#" class="btn btn-outline">Masculino</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card top2"></div>
+            <div class="card mid1"></div>
+            <div class="card mid2"></div>
+            <div class="card bot1"></div>
+            <div class="card bot2"></div>
         </section>
     </main>
 
