feat: Adicionado footer

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./css/components/hero.css">
     <link rel="stylesheet" href="./css/components/prod-cat.css">
     <link rel="stylesheet" href="./css/components/prod-grid.css">
+    <link rel="stylesheet" href="./css/components/footer.css">
 </head>
 
 <body>
@@ -163,7 +164,76 @@
 
     <!-- Informações de contato e links -->
     <footer class="footer">
-
+        <div class="footer-content">
+            <div class="footer-left">
+                <form class="footer-newsletter">
+                    <label for="newsletter-email">Inscreva-se em nosso e-mail</label>
+                    <input type="email" id="newsletter-email" placeholder="email@email.com">
+                </form>
+                <div class="footer-social">
+                    <span>Redes sociais</span>
+                    <ul class="social-list">
+                        <li><a href="#" aria-label="Instagram">
+                            <img src="./images/footer/insta.svg" alt="Instagram">
+                        </a></li>
+                        <li><a href="#" aria-label="WhatsApp">
+                            <img src="./images/footer/wpp.svg" alt="Whatsapp">
+                        </a></li>
+                        <li><a href="#" aria-label="TikTok">
+                            <img src="./images/footer/tktk.svg" alt="TikTok">
+                        </a></li>
+                        <li><a href="#" aria-label="Facebook">
+                            <img src="./images/footer/face.svg" alt="Facebook">
+                        </a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-menus">
+                <div class="footer-menu">
+                    <span>Masculino</span>
+                    <ul>
+                        <li><a href="#">Casual</a></li>
+                        <li><a href="#">Esporte</a></li>
+                        <li><a href="#">Moderno</a></li>
+                        <li><a href="#">Futurista</a></li>
+                    </ul>
+                </div>
+                <div class="footer-menu">
+                    <span>Feminino</span>
+                    <ul>
+                        <li><a href="#"><b>Casual</b></a></li>
+                        <li><a href="#"><b>Esporte</b></a></li>
+                        <li><a href="#"><b>Moderno</b></a></li>
+                        <li><a href="#"><b>Futurista</b></a></li>
+                    </ul>
+                </div>
+                <div class="footer-menu">
+                    <span>Outlet</span>
+                    <ul>
+                        <li><a href="#">Masculino</a></li>
+                        <li><a href="#">Feminino</a></li>
+                    </ul>
+                </div>
+                <div class="footer-menu">
+                    <span>Nossas lojas</span>
+                    <ul>
+                        <li><a href="#">Loja física</a></li>
+                        <li><a href="#">Loja online</a></li>
+                    </ul>
+                </div>
+                <div class="footer-menu">
+                    <span>Sobre</span>
+                    <ul>
+                        <li><a href="#">Quem somos</a></li>
+                        <li><a href="#">Missão</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <hr class="footer-divider">
+        <div class="footer-copy">
+            Copyright. All Rights Reserved
+        </div>
     </footer>
 </body>
 
