feat: Adicionado responsividade para dispositivos de telas abaixo de 1024px

--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
             <div class="hero-overlay">
                 <div class="hero-content">
                     <span class="hero-subtitle">Kripton One</span>
-                    <h2 class="hero-title">Transforme qualquer passo em presença.</h2>
+                    <h2 class="hero-title">
+                        Transforme qualquer<br>
+                        passo em presença.
+                    </h2>
 
                     <div class="hero-buttons">
                         <a href="#" class="btn btn-outline">Ver modelos</a>
